# mindmap-app

./: .gitignore  FILE_STORAGE_README.md  README.md  diagnostic.js
backend/: package.json  server.js
backend/prisma/: schema.prisma
backend/prisma/migrations/20260122110241_add_messy_features/: migration.sql
backend/prisma/migrations/20260122142004_init/: migration.sql
backend/prisma/migrations/20260127165730_update_graph_model/: migration.sql
backend/prisma/migrations/20260127182606_add_graph_edges/: migration.sql
backend/prisma/migrations/20260128041733_init/: migration.sql
frontend/: index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  App.tsx  Main.jsx  index.css  main.tsx  theme.css  types.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/components/: Dashboard.jsx  EditorPage.jsx  EditorPage.tsx  MessyMap.jsx  QuickCapture.jsx  QuickCapture.tsx  Sidebar.jsx  Sidebar.tsx
frontend/src/contexts/: NotesContext.jsx  NotesContext.tsx
frontend/src/services/: FileService.js  FileService.ts
